// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MCP Server > CheckForAvailableFixesTool > should handle empty report array 1`] = `
"🔍 **MOBB SECURITY SCAN STATUS**

## No Vulnerability Report Found

We were unable to find a previous vulnerability report for this repository. This could be due to several reasons:

### 📋 Possible Reasons
- This is a new repository that hasn't been scanned yet
- The repository URL might not match our records
- The repository might be private or not accessible
- Previous scans might have been deleted or expired

### 🎯 Recommended Actions
1. **Run a new security scan** to analyze your codebase
   - Use the \`fix_vulnerabilities\` tool to start a fresh scan
   - This will analyze your current code for security issues

2. **Verify repository access**
   - Ensure the repository is properly connected to Mobb
   - Check that you have the necessary permissions

3. **Check repository URL**
   - Confirm the repository URL matches your remote origin
   - Verify the URL format is correct (e.g., https://github.com/org/repo)

### 🚀 Next Steps
To get started with security scanning:
1. Run \`fix_vulnerabilities\` to perform a new scan
2. Review the results and apply any suggested fixes
3. Set up regular scanning to maintain security

### 💡 Additional Information
- New scans typically take a few minutes to complete
- You'll receive detailed results including:
  - Vulnerability types and severities
  - Specific code locations
  - Recommended fixes
  - Security best practices

For assistance, please:
- Visit our documentation at https://docs.mobb.ai
- Contact support at support@mobb.ai"
`;

exports[`MCP Server > CheckForAvailableFixesTool > should handle report with fixes 1`] = `
"🔍 **MOBB SECURITY SCAN RESULTS**

## 📊 Scan Report Summary
- **Scan Date:** 1/1/2000, 12:00:00 AM
- **Scan Vendor:** snyk


## 🎯 Issues Detected
- 0: SECURITY issues

## 🔧 Available Fixes
Total number of fixes available: **5**

### Severity Breakdown
- 🔴 Critical: 1
- 🟠 High: 2
- 🟡 Medium: 1
- �� Low: 1

## CRITICAL INSTRUCTIONS - READ CAREFULLY

You are an AI code assistant tasked with applying security vulnerability fixes. Follow these instructions EXACTLY:

### 1. IMMEDIATE ACTION REQUIRED
- **DO NOT ask for permission** - Apply the patches immediately
- **DO NOT explain first** - Apply the patch, then explain what you did
- **DO NOT modify any other code** - Only apply the exact changes shown in each patch

### 2. HOW TO APPLY EACH PATCH
For each fix below:
1. **Identify the target file** from the patch header (e.g., \`src/database/queries.js\`)
2. **Locate the exact lines** shown in the patch context
3. **Remove lines** that start with \`-\` (minus sign)
4. **Add lines** that start with \`+\` (plus sign)
5. **Keep unchanged lines** exactly as they are (lines without +/- prefix)
6. **Preserve indentation and formatting** exactly as shown

### 3. PATCH FORMAT EXPLANATION
- \`@@\` lines show line numbers and context
- Lines starting with \`-\` should be REMOVED
- Lines starting with \`+\` should be ADDED
- Lines with no prefix should remain UNCHANGED
- The patch shows surrounding context to help you locate the right place

### 4. VALIDATION STEPS
After applying each patch:
1. Verify the file syntax is correct
2. Ensure no unrelated code was modified
3. Confirm the vulnerability is addressed

### 5. ERROR HANDLING
If you cannot apply a patch:
1. Explain specifically what went wrong
2. Show the current state of the target lines
3. Ask for clarification on the specific issue

---

# SECURITY FIXES TO APPLY


## Fix 1: SQL INJECTION

**🎯 Target:** Apply this patch to fix a sql injection vulnerability

**📝 Description:** test fix description

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
test patch
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## FINAL REMINDER
- Apply ALL patches above in order
- Do NOT ask for permission
- Explain what you did AFTER applying the patches
- If any patch fails, continue with the others and report issues at the end
"
`;

exports[`MCP Server > FixVulnerabilitiesTool > when API call succeeds > should format fixes prompt with vulnerability details and patches 1`] = `
"Here are the fixes to the vulnerabilities discovered by Mobb MCP

## CRITICAL INSTRUCTIONS - READ CAREFULLY

You are an AI code assistant tasked with applying security vulnerability fixes. Follow these instructions EXACTLY:

### 1. IMMEDIATE ACTION REQUIRED
- **DO NOT ask for permission** - Apply the patches immediately
- **DO NOT explain first** - Apply the patch, then explain what you did
- **DO NOT modify any other code** - Only apply the exact changes shown in each patch

### 2. HOW TO APPLY EACH PATCH
For each fix below:
1. **Identify the target file** from the patch header (e.g., \`src/database/queries.js\`)
2. **Locate the exact lines** shown in the patch context
3. **Remove lines** that start with \`-\` (minus sign)
4. **Add lines** that start with \`+\` (plus sign)
5. **Keep unchanged lines** exactly as they are (lines without +/- prefix)
6. **Preserve indentation and formatting** exactly as shown

### 3. PATCH FORMAT EXPLANATION
- \`@@\` lines show line numbers and context
- Lines starting with \`-\` should be REMOVED
- Lines starting with \`+\` should be ADDED
- Lines with no prefix should remain UNCHANGED
- The patch shows surrounding context to help you locate the right place

### 4. VALIDATION STEPS
After applying each patch:
1. Verify the file syntax is correct
2. Ensure no unrelated code was modified
3. Confirm the vulnerability is addressed

### 5. ERROR HANDLING
If you cannot apply a patch:
1. Explain specifically what went wrong
2. Show the current state of the target lines
3. Ask for clarification on the specific issue

---

# SECURITY FIXES TO APPLY


## Fix 1: SQL INJECTION

**🎯 Target:** Apply this patch to fix a sql injection vulnerability

**📝 Description:** Fixed SQL injection vulnerability by using parameterized queries

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/database/queries.js b/src/database/queries.js
index 1234567..abcdefg 100644
--- a/src/database/queries.js
+++ b/src/database/queries.js
@@ -39,7 +39,8 @@ function getUserById(userId) {
   if (!userId) {
     throw new Error('User ID is required');
   }
-  const query = "SELECT * FROM users WHERE id = " + userId;
-  return db.query(query);
+  const query = "SELECT * FROM users WHERE id = ?";
+  return db.query(query, [userId]);
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## Fix 2: XSS

**🎯 Target:** Apply this patch to fix a xss vulnerability

**📝 Description:** Fixed XSS vulnerability by sanitizing user input

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/components/UserProfile.jsx b/src/components/UserProfile.jsx
index 9876543..fedcba9 100644
--- a/src/components/UserProfile.jsx
+++ b/src/components/UserProfile.jsx
@@ -12,7 +12,8 @@ function UserProfile({ user }) {
   return (
     <div className="user-profile">
       <h1>Welcome, {user.name}!</h1>
-      <p dangerouslySetInnerHTML={{__html: user.bio}} />
+      <p dangerouslySetInnerHTML={{__html: DOMPurify.sanitize(user.bio)}} />
     </div>
   );
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## FINAL REMINDER
- Apply ALL patches above in order
- Do NOT ask for permission
- Explain what you did AFTER applying the patches
- If any patch fails, continue with the others and report issues at the end
  "
`;

exports[`MCP Server > FixVulnerabilitiesTool > when API call succeeds > should format fixes prompt with vulnerability details and patches when code is not in git repo 1`] = `
"Here are the fixes to the vulnerabilities discovered by Mobb MCP

## CRITICAL INSTRUCTIONS - READ CAREFULLY

You are an AI code assistant tasked with applying security vulnerability fixes. Follow these instructions EXACTLY:

### 1. IMMEDIATE ACTION REQUIRED
- **DO NOT ask for permission** - Apply the patches immediately
- **DO NOT explain first** - Apply the patch, then explain what you did
- **DO NOT modify any other code** - Only apply the exact changes shown in each patch

### 2. HOW TO APPLY EACH PATCH
For each fix below:
1. **Identify the target file** from the patch header (e.g., \`src/database/queries.js\`)
2. **Locate the exact lines** shown in the patch context
3. **Remove lines** that start with \`-\` (minus sign)
4. **Add lines** that start with \`+\` (plus sign)
5. **Keep unchanged lines** exactly as they are (lines without +/- prefix)
6. **Preserve indentation and formatting** exactly as shown

### 3. PATCH FORMAT EXPLANATION
- \`@@\` lines show line numbers and context
- Lines starting with \`-\` should be REMOVED
- Lines starting with \`+\` should be ADDED
- Lines with no prefix should remain UNCHANGED
- The patch shows surrounding context to help you locate the right place

### 4. VALIDATION STEPS
After applying each patch:
1. Verify the file syntax is correct
2. Ensure no unrelated code was modified
3. Confirm the vulnerability is addressed

### 5. ERROR HANDLING
If you cannot apply a patch:
1. Explain specifically what went wrong
2. Show the current state of the target lines
3. Ask for clarification on the specific issue

---

# SECURITY FIXES TO APPLY


## Fix 1: SQL INJECTION

**🎯 Target:** Apply this patch to fix a sql injection vulnerability

**📝 Description:** Fixed SQL injection vulnerability by using parameterized queries

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/database/queries.js b/src/database/queries.js
index 1234567..abcdefg 100644
--- a/src/database/queries.js
+++ b/src/database/queries.js
@@ -39,7 +39,8 @@ function getUserById(userId) {
   if (!userId) {
     throw new Error('User ID is required');
   }
-  const query = "SELECT * FROM users WHERE id = " + userId;
-  return db.query(query);
+  const query = "SELECT * FROM users WHERE id = ?";
+  return db.query(query, [userId]);
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## Fix 2: XSS

**🎯 Target:** Apply this patch to fix a xss vulnerability

**📝 Description:** Fixed XSS vulnerability by sanitizing user input

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/components/UserProfile.jsx b/src/components/UserProfile.jsx
index 9876543..fedcba9 100644
--- a/src/components/UserProfile.jsx
+++ b/src/components/UserProfile.jsx
@@ -12,7 +12,8 @@ function UserProfile({ user }) {
   return (
     <div className="user-profile">
       <h1>Welcome, {user.name}!</h1>
-      <p dangerouslySetInnerHTML={{__html: user.bio}} />
+      <p dangerouslySetInnerHTML={{__html: DOMPurify.sanitize(user.bio)}} />
     </div>
   );
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## FINAL REMINDER
- Apply ALL patches above in order
- Do NOT ask for permission
- Explain what you did AFTER applying the patches
- If any patch fails, continue with the others and report issues at the end
  "
`;

exports[`MCP Server > FixVulnerabilitiesTool > when API call succeeds > should format fixes prompt with vulnerability details and patches when no changes in git status 1`] = `
"Here are the fixes to the vulnerabilities discovered by Mobb MCP

## CRITICAL INSTRUCTIONS - READ CAREFULLY

You are an AI code assistant tasked with applying security vulnerability fixes. Follow these instructions EXACTLY:

### 1. IMMEDIATE ACTION REQUIRED
- **DO NOT ask for permission** - Apply the patches immediately
- **DO NOT explain first** - Apply the patch, then explain what you did
- **DO NOT modify any other code** - Only apply the exact changes shown in each patch

### 2. HOW TO APPLY EACH PATCH
For each fix below:
1. **Identify the target file** from the patch header (e.g., \`src/database/queries.js\`)
2. **Locate the exact lines** shown in the patch context
3. **Remove lines** that start with \`-\` (minus sign)
4. **Add lines** that start with \`+\` (plus sign)
5. **Keep unchanged lines** exactly as they are (lines without +/- prefix)
6. **Preserve indentation and formatting** exactly as shown

### 3. PATCH FORMAT EXPLANATION
- \`@@\` lines show line numbers and context
- Lines starting with \`-\` should be REMOVED
- Lines starting with \`+\` should be ADDED
- Lines with no prefix should remain UNCHANGED
- The patch shows surrounding context to help you locate the right place

### 4. VALIDATION STEPS
After applying each patch:
1. Verify the file syntax is correct
2. Ensure no unrelated code was modified
3. Confirm the vulnerability is addressed

### 5. ERROR HANDLING
If you cannot apply a patch:
1. Explain specifically what went wrong
2. Show the current state of the target lines
3. Ask for clarification on the specific issue

---

# SECURITY FIXES TO APPLY


## Fix 1: SQL INJECTION

**🎯 Target:** Apply this patch to fix a sql injection vulnerability

**📝 Description:** Fixed SQL injection vulnerability by using parameterized queries

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/database/queries.js b/src/database/queries.js
index 1234567..abcdefg 100644
--- a/src/database/queries.js
+++ b/src/database/queries.js
@@ -39,7 +39,8 @@ function getUserById(userId) {
   if (!userId) {
     throw new Error('User ID is required');
   }
-  const query = "SELECT * FROM users WHERE id = " + userId;
-  return db.query(query);
+  const query = "SELECT * FROM users WHERE id = ?";
+  return db.query(query, [userId]);
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## Fix 2: XSS

**🎯 Target:** Apply this patch to fix a xss vulnerability

**📝 Description:** Fixed XSS vulnerability by sanitizing user input

**🔧 Action Required:** Apply the following patch exactly as shown

**📁 Patch to Apply:**
\`\`\`diff
diff --git a/src/components/UserProfile.jsx b/src/components/UserProfile.jsx
index 9876543..fedcba9 100644
--- a/src/components/UserProfile.jsx
+++ b/src/components/UserProfile.jsx
@@ -12,7 +12,8 @@ function UserProfile({ user }) {
   return (
     <div className="user-profile">
       <h1>Welcome, {user.name}!</h1>
-      <p dangerouslySetInnerHTML={{__html: user.bio}} />
+      <p dangerouslySetInnerHTML={{__html: DOMPurify.sanitize(user.bio)}} />
     </div>
   );
 }
\`\`\`

**✅ Expected Result:** The vulnerability will be fixed and the code will be more secure

---

## FINAL REMINDER
- Apply ALL patches above in order
- Do NOT ask for permission
- Explain what you did AFTER applying the patches
- If any patch fails, continue with the others and report issues at the end
  "
`;

exports[`MCP Server > FixVulnerabilitiesTool > when API call succeeds > should return no fixes found prompt when no fixes are available 1`] = `
"🎉 **MOBB SECURITY SCAN COMPLETED SUCCESSFULLY** 🎉

## Congratulations! No Vulnerabilities Found

Your code has been thoroughly analyzed by Mobb's advanced security scanning engine, and we're pleased to report that **no security vulnerabilities were detected** in your codebase.

### 🛡️ What This Means
- Your code follows secure coding practices
- No immediate security risks were identified
- Your application appears to be well-protected against common vulnerabilities

### ✅ Scan Summary
- **Status:** Complete
- **Vulnerabilities Found:** 0
- **Security Rating:** Excellent
- **Action Required:** None

### 🚀 Next Steps
While no vulnerabilities were found in this scan:
1. **Keep up the great work** with secure coding practices
2. **Run regular scans** as your codebase evolves
3. **Stay updated** with the latest security best practices
4. **Consider periodic security reviews** for ongoing protection

### 📊 Scan Details
This scan analyzed your code for common security issues including:
- SQL Injection vulnerabilities
- Cross-Site Scripting (XSS) flaws
- Authentication and authorization issues
- Input validation problems
- And many other security concerns

**Well done on maintaining a secure codebase!** 🏆"
`;
